--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,6 +63,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button_next_page"
         app:layout_constraintStart_toEndOf="@+id/button_previous_page"
-        app:layout_constraintTop_toBottomOf="@+id/movie_list" />
+        app:layout_constraintTop_toBottomOf="@+id/rating_list" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
